tests/duplicate-bindings.stderr
error[E020]: `Alpha` is defined multiple times in this scope
   > ${DIRECTORY}/duplicate-bindings.lushui:11:1
   |
 8 | data Alpha: Type =
   |      ----- previous definition
   |
11 | Alpha: Type = Type
   | ^^^^^ redefinition

error[E020]: `beta` is defined multiple times in this scope
   > ${DIRECTORY}/duplicate-bindings.lushui:22:1
   |
13 | beta: Nat = 1000
   | ---- previous definition
   |
22 | beta (x y: Nat): Nat = y
   | ^^^^ redefinition

error[E020]: `capsule` is defined multiple times in this scope
   > ${DIRECTORY}/duplicate-bindings.lushui:24:1
   |
15 | module capsule =
   |        ------- previous definition
   |
24 | capsule: Nat = beta
   | ^^^^^^^ redefinition

error[E020]: `Nat` is defined multiple times in this scope
   > ${DIRECTORY}/duplicate-bindings.lushui:18:10
   |
16 |     use super.Nat
   |               --- previous definition
   |
18 |     data Nat: Type =
   |          ^^^ redefinition

error[E020]: `zero` is defined multiple times in this scope
   > ${DIRECTORY}/duplicate-bindings.lushui:31:13
   |
29 | zero: Nat = 0
   | ---- previous definition
   |
31 | use capsule.zero
   |             ^^^^ redefinition

error: aborting due to 5 previous errors

